GH-79 a sort of, kind of, working prototype