@@ -15,15 +15,16 @@
  */
 package org.icepdf.core.pobjects.security;
 
-import org.icepdf.core.exceptions.PDFSecurityException;
+import org.icepdf.core.exceptions.PdfSecurityException;
+import org.icepdf.core.pobjects.DictionaryEntries;
 import org.icepdf.core.pobjects.Reference;
 import org.icepdf.core.util.Defs;
 import org.icepdf.core.util.Library;
 
 import java.io.InputStream;
+import java.lang.reflect.InvocationTargetException;
 import java.security.Provider;
 import java.security.Security;
-import java.util.HashMap;
 import java.util.List;
 import java.util.logging.Level;
 import java.util.logging.Logger;
@@ -56,10 +57,10 @@ public class SecurityManager {
 
     // Default Encryption dictionary, which also contians keys need for
     // standard, crypt and public security handlers.
-    private EncryptionDictionary encryptDictionary = null;
+    private EncryptionDictionary encryptDictionary;
 
     // Pointer to class which implements the SecurityHandler interface
-    private SecurityHandler securityHandler = null;
+    private SecurityHandler securityHandler;
 
     // flag for detecting JCE
     private static boolean foundJCE = false;
@@ -84,14 +85,18 @@ public class SecurityManager {
         }
         try {
             // try and create a new provider
-            Object provider = Class.forName(defaultSecurityProvider).newInstance();
+            Object provider = Class.forName(defaultSecurityProvider).getDeclaredConstructor().newInstance();
             Security.addProvider((Provider) provider);
         } catch (ClassNotFoundException e) {
             logger.log(Level.FINE, "Optional BouncyCastle security provider not found");
+        } catch (NoSuchMethodException e) {
+            logger.log(Level.FINE, "Optional BouncyCastle security provider no such method error");
         } catch (InstantiationException e) {
             logger.log(Level.FINE, "Optional BouncyCastle security provider could not be instantiated");
         } catch (IllegalAccessException e) {
             logger.log(Level.FINE, "Optional BouncyCastle security provider could not be created");
+        } catch (InvocationTargetException e) {
+            logger.log(Level.FINE, "Optional BouncyCastle security provider invocation target exception");
         }
 
         try {
@@ -115,17 +120,17 @@ public class SecurityManager {
      * @param library              library of documents PDF objects
      * @param encryptionDictionary encryption dictionary key values
      * @param fileID               fileID of PDF document
-     * @throws PDFSecurityException if the security provider could not be found
+     * @throws PdfSecurityException if the security provider could not be found
      */
-    public SecurityManager(Library library, HashMap<Object, Object> encryptionDictionary,
+    public SecurityManager(Library library, DictionaryEntries encryptionDictionary,
                            List fileID)
-            throws PDFSecurityException {
+            throws PdfSecurityException {
 
         // Check to make sure that if run under JDK 1.3 that the JCE libraries
         // are installed as extra packages
         if (!foundJCE) {
             logger.log(Level.SEVERE, "Sun JCE support was not found on classpath");
-            throw new PDFSecurityException("Sun JCE Support Not Found");
+            throw new PdfSecurityException("Sun JCE Support Not Found");
         }
 
         // create dictionary for document
@@ -139,7 +144,7 @@ public class SecurityManager {
             // initiate the handler
             securityHandler.init();
         } else {
-            throw new PDFSecurityException("Security Provider Not Found.");
+            throw new PdfSecurityException("Security Provider Not Found.");
         }
     }
 
@@ -242,7 +247,7 @@ public class SecurityManager {
     public InputStream decryptInputStream(
             Reference objectReference,
             byte[] encryptionKey,
-            HashMap decodeParams,
+            DictionaryEntries decodeParams,
             InputStream input,
             boolean returnInputIfNullResult) {
         InputStream result = securityHandler.decryptInputStream(
@@ -267,7 +272,7 @@ public class SecurityManager {
     public InputStream encryptInputStream(
             Reference objectReference,
             byte[] encryptionKey,
-            HashMap decodeParams,
+            DictionaryEntries decodeParams,
             InputStream input,
             boolean returnInputIfNullResult) {
         InputStream result = securityHandler.encryptInputStream(
